--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -47,7 +47,7 @@ h1 {
 #app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -94,4 +94,8 @@ h1 {
   }
 }
 
-@media (min-width: 1024px) {}
+@media (max-width: 960px) {
+	section {
+		padding: .5rem;
+	}
+}
