--- a/front/src/assets/main.scss
+++ b/front/src/assets/main.scss
@@ -20,7 +20,7 @@ section {
   align-items: center;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem 2rem;
   font-weight: normal;
 }
 
