--- a/front/src/assets/base.css
+++ b/front/src/assets/base.css
@@ -32,11 +32,9 @@
 
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
-
-  --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: todo-dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
@@ -56,7 +54,6 @@
   box-sizing: border-box;
   margin: 0;
   position: relative;
-  /*font-weight: normal;*/
 }
 
 html {
