--- a/front/src/assets/main.scss
+++ b/front/src/assets/main.scss
@@ -148,3 +148,25 @@ hr {
     padding: .5rem;
   }
 }
+
+.loading, .loadable:empty {
+  background-image: linear-gradient(90deg,
+      rgba(200, 200, 200, 0) 10%,
+      rgba(200, 200, 200, 0.6) 50%,
+      rgba(200, 200, 200, 0) 90%) !important;
+  background-size: 90% 100% !important;
+  background-repeat: no-repeat;
+  animation: loading 0.5s linear infinite;
+  min-height: 1.6em;
+  border-radius: 4px;
+}
+
+@keyframes loading {
+  0% {
+    background-position: -800% 0;
+  }
+
+  100% {
+    background-position: 1000% 0;
+  }
+}
