front: uniformisation des bordures arrondies

--- a/front/src/assets/main.scss
+++ b/front/src/assets/main.scss
@@ -33,13 +33,14 @@ article {
   flex-direction: column;
   align-items: center;
   padding: 8px;
-  border-radius: 4px;
+  border-radius: 8px;
   @include shadow;
 }
 
 a {
   text-decoration: none;
   color: var(--color-primary);
+  border-radius: 8px;
   transition: 0.3s;
 
   &:hover {
@@ -50,7 +51,7 @@ a {
 select,
 input,
 button {
-  border-radius: 4px;
+  border-radius: 8px;
   padding: 12px 8px;
   margin-top: 10px;
   background-color: var(--color-background);
@@ -100,19 +101,20 @@ hr {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
-  margin: 10px;
+  width: 8px;
+  height: 8px;
+  margin: 8px;
 }
 
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-  margin: 4px;
+  border-radius: 8px;
+  margin: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
   background: rgba(150, 150, 150, .5);
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
